# XL-Engine

./: CMakeLists.txt
OS/: CMakeLists.txt
XLEngine/: CMakeLists.txt
XLEngine/Graphics/: CMakeLists.txt
XLEngine/Graphics/CommonGL/: CMakeLists.txt
XLEngine/Graphics/Devices/: CMakeLists.txt
XLEngine/PluginFramework/: CMakeLists.txt
XLEngine/Sound/: CMakeLists.txt  midi.cpp
XLEngine/Text/: CMakeLists.txt
XLEngine/Threads/: CMakeLists.txt
XLEngine/UI/: CMakeLists.txt
